src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto Condensed", sans-serif;
}

body {
  min-height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.product-card {
  height: 32rem;
  width: 20rem;
  border-radius: 2rem;
  overflow: hidden;
  border: solid 1px #3b494f4c;
}

.img-section {
  width: 100%;
  height: 50%;
  padding: 0.3rem;
  background-color: #fabd46;
}
#product-img {
  height: 100%;
  width: 100%;
  object-fit: contain;
  object-position: center;
  mix-blend-mode: multiply;
}

.details-section {
  padding: 0.4rem 1rem;
  height: 100%;
  width: 100%;
}
#product-title {
  font-size: 1.2rem;
  font-weight: 500;
  color: #20292c;
  padding-bottom: 0.4rem;
}
.ratings-section {
  width: 100%;
  height: 2rem;
  display: flex;
  align-items: center;
  gap: 0.3rem;
}
#star {
  height: 1.2rem;
  width: 1.2rem;
}

#product-ratings {
  color: #2c3539;
}
#product-ratings span {
  color: #1fd655;
}
#product-description {
  font-size: 0.8rem;
  color: #3b494f;
  padding: 0.3rem 0rem;
}
#product-category {
  border-radius: 20rem;
  width: fit-content;
  height: fit-content;
  text-align: center;
  padding: 0.4rem 0.7rem;
  margin: 0.2rem;
  border: solid 2px #3b494f;
  color: #3b494f;
}
.price-btn-section {
  margin-top: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#product-price {
  font-size: 1.4rem;
  color: #fabd46;
}

#cart-btn {
  border-radius: 15rem;
  outline: none;
  border: none;
  background-color: #fabd46;
  font-size: 1.2rem;
  width: 60%;
  height: 2.3rem;
  color: #2c3539;
}

